cloudbuild.yaml updated.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,13 @@
 
 steps:
   - name: gcr.io/cloud-builders/docker
-    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:android-builder', '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:$COMMIT_SHA', '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:latest', '.' ]
+    args: [
+      'build',
+      '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:android-builder',
+      '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:$COMMIT_SHA',
+      '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:latest',
+      '.'
+    ]
     env:
       - 'BUILD=$BUILD_ID'
       - 'PROJECT=$PROJECT_ID'
