--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -15,6 +15,9 @@ android {
         testBuildType "debug"
         multiDexEnabled true
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
