--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:3.6.3"
         classpath "com.google.firebase:firebase-appdistribution-gradle:1.4.1"
         classpath "com.google.firebase:perf-plugin:1.3.1"
+        classpath "com.google.gms:google-services:4.3.3"
     }
 }
 
