--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -4,12 +4,12 @@ apply plugin: "com.google.firebase.firebase-perf"
 
 android {
     defaultConfig {
-        applicationId "io.syslogic.cloudbuild"
-        minSdkVersion 19
-        targetSdkVersion 29
-        compileSdkVersion 29
-        versionName "1.0.0"
-        versionCode 1
+        applicationId rootProject.ext.get("applicationId")
+        targetSdkVersion rootProject.ext.get("targetSdkVersion")
+        compileSdkVersion rootProject.ext.get("compileSdkVersion")
+        minSdkVersion rootProject.ext.get("minSdkVersion")
+        versionName rootProject.ext.get("versionName")
+        versionCode rootProject.ext.get("versionCode")
 
         // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testBuildType "debug"
