--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,10 +11,8 @@ steps:
     - 'REV=$REVISION_ID'
   args: [
     'build',
-
-    '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:android',
-    '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:${COMMIT_SHA}',
-    '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild:latest',
+    '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild-android:${COMMIT_SHA}',
+    '-t', 'eu.gcr.io/$PROJECT_ID/cloudbuild-android:latest',
 
     # these are used for variable substitutions (as shown in screenshot_01.png):
     # https://cloud.google.com/cloud-build/docs/configuring-builds/substitute-variable-values
@@ -33,6 +31,5 @@ steps:
   ]
 
 images:
-- 'eu.gcr.io/$PROJECT_ID/cloudbuild:android'
 - 'eu.gcr.io/$PROJECT_ID/cloudbuild:${COMMIT_SHA}'
 - 'eu.gcr.io/$PROJECT_ID/cloudbuild:latest'
