--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
 
     # these are the same, but with static values (no trigger configuration required)
     '--build-arg', 'ANDROID_SDK_VERSION=6200805',
-    #'--build-arg', 'ANDROID_NDK_VERSION=r21b',
+    '--build-arg', 'ANDROID_NDK_VERSION=21.1.6352462',
     '--build-arg', 'GRADLE_VERSION=5.6.4',
 
     # enable cloudbuild network
