--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,12 +17,14 @@ steps:
     # these are used for variable substitutions (as shown in screenshot_01.png):
     # https://cloud.google.com/cloud-build/docs/configuring-builds/substitute-variable-values
     #'--build-arg', 'ANDROID_SDK_VERSION=${_ANDROID_SDK_VERSION}',
+    #'--build-arg', 'ANDROID_SDK_PLATFORM=${_ANDROID_SDK_PLATFORM}',
     #'--build-arg', 'ANDROID_NDK_VERSION=${_ANDROID_NDK_VERSION}',
     #'--build-arg', 'GRADLE_VERSION=${_GRADLE_VERSION}',
 
-    # these are the same, but with static values (no trigger configuration required)
+    # the same, but with static values (no build-trigger configuration required)
     '--build-arg', 'ANDROID_SDK_VERSION=6200805',
-    '--build-arg', 'ANDROID_NDK_VERSION=21.1.6352462',
+    '--build-arg', 'ANDROID_SDK_PLATFORM=29',
+    #'--build-arg', 'ANDROID_NDK_VERSION=21.1.6352462',
     '--build-arg', 'GRADLE_VERSION=5.6.4',
 
     # enable cloudbuild network
