--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,21 +16,15 @@ steps:
 
     # These are used for variable substitutions (as shown in screenshot_01.png):
     # https://cloud.google.com/cloud-build/docs/configuring-builds/substitute-variable-values
-    #'--build-arg', 'ANDROID_SDK_VERSION=${_ANDROID_SDK_VERSION}',
-    #'--build-arg', 'ANDROID_NDK_VERSION=${_ANDROID_NDK_VERSION}',
     #'--build-arg', 'GRADLE_VERSION=${_GRADLE_VERSION}',
-    #'--build-arg', 'ANDROID_SDK_PLATFORM=${_ANDROID_SDK_PLATFORM}',
-    #'--build-arg', 'BUILD_TOOLS_VERSION=${_BUILD_TOOLS_VERSION}',
+    #'--build-arg', 'SDK_PACKAGES="${_SDK_PACKAGES"}',
 
     # The same, but with static values (no build-trigger configuration required)
-    '--build-arg', 'ANDROID_SDK_VERSION=6200805',
-    #'--build-arg', 'ANDROID_NDK_VERSION=21.1.6352462',
-    '--build-arg', 'GRADLE_VERSION=5.6.4',
-
     # When commenting these out, one has to run `./gradlew build` to fetch them
-    '--build-arg', 'ANDROID_SDK_PLATFORM=29',
-    '--build-arg', 'BUILD_TOOLS_VERSION=28.0.3',
-
+    '--build-arg', 'GRADLE_VERSION=5.6.4',
+    # '--build-arg', 'SDK_PACKAGES="platform-tools platforms;android-29 build-tools;28.0.3 ndk;21.1.6352462"',
+    '--build-arg', 'SDK_PACKAGES="platform-tools platforms;android-29 build-tools;28.0.3"',
+    
     # enable cloudbuild network
     '--network', 'cloudbuild',
     '.'
