--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,8 +22,8 @@ steps:
     # The same, but with static values (no build-trigger configuration required)
     # When commenting these out, one has to run `./gradlew build` to fetch them
     '--build-arg', 'GRADLE_VERSION=5.6.4',
-    # '--build-arg', 'SDK_PACKAGES="platform-tools platforms;android-29 build-tools;28.0.3 ndk;21.1.6352462"',
-    '--build-arg', 'SDK_PACKAGES="platform-tools platforms;android-29 build-tools;28.0.3"',
+    # '--build-arg', 'SDK_PACKAGES=platform-tools platforms;android-29 build-tools;28.0.3 ndk;21.1.6352462',
+    '--build-arg', 'SDK_PACKAGES=platform-tools platforms;android-29 build-tools;28.0.3',
     
     # enable cloudbuild network
     '--network', 'cloudbuild',
