--- a/version.properties
+++ b/version.properties
@@ -1,4 +1,4 @@
-applicationId = io.syslogic.cloudrun
+applicationId = io.syslogic.cloudbuild
 versionName = 1.0.0
 versionCode = 1
 compileSdkVersion = 29
