--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,6 +1,10 @@
+// Module :mobile.
+
+// apply plugins
 apply plugin: "com.android.application"
 apply plugin: "com.google.firebase.appdistribution"
 apply plugin: "com.google.firebase.firebase-perf"
+apply plugin: "com.google.firebase.crashlytics"
 
 android {
 
@@ -37,15 +41,22 @@ android {
         }
 
         buildTypes {
+
             debug {
                 signingConfig signingConfigs.debug
             }
+
             release {
                 signingConfig signingConfigs.release
+
                 firebaseAppDistribution {
                     serviceCredentialsFile = rootProject.file("credentials/google-service-account.json")
                     releaseNotesFile = rootProject.file("credentials/release_notes.txt")
                     testersFile = rootProject.file("credentials/testers.txt")
+                }
+
+                firebaseCrashlytics {
+                    nativeSymbolUploadEnabled false
                 }
             }
         }
@@ -57,6 +68,9 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.navigation:navigation-fragment:2.2.2"
     implementation "androidx.navigation:navigation-ui:2.2.2"
+
+    // implementation "com.crashlytics.sdk.android:crashlytics-ndk:2.1.1"
+    implementation "com.crashlytics.sdk.android:crashlytics:2.10.1"
 }
 
 if(project.file('google-services.json').exists()) {
