--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -68,9 +68,9 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.navigation:navigation-fragment:2.2.2"
     implementation "androidx.navigation:navigation-ui:2.2.2"
-
-    // implementation "com.crashlytics.sdk.android:crashlytics-ndk:2.1.1"
-    implementation "com.crashlytics.sdk.android:crashlytics:2.10.1"
+    
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
+    implementation "com.google.firebase:firebase-crashlytics-ndk:17.0.0"
 }
 
 if(project.file('google-services.json').exists()) {
