--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -66,13 +66,13 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation "androidx.navigation:navigation-fragment:2.3.0"
-    implementation "androidx.navigation:navigation-ui:2.3.0"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
-    implementation "com.google.firebase:firebase-crashlytics-ndk:17.1.1"
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics-ndk:18.2.1'
 }
 
 if(project.file('google-services.json').exists()) {
