--- a/build.gradle
+++ b/build.gradle
@@ -33,15 +33,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
         maven { url "https://developer.huawei.com/repo/" }
-        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2"
-        classpath "com.google.firebase:firebase-appdistribution-gradle:3.0.1"
-        classpath "com.google.firebase:firebase-crashlytics-gradle:2.9.1"
-        classpath "com.google.firebase:perf-plugin:1.4.1"
-        classpath "com.google.gms:google-services:4.3.13"
+        classpath "com.android.tools.build:gradle:7.4.0"
+        classpath "com.google.firebase:firebase-appdistribution-gradle:3.2.0"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:2.9.2"
+        classpath "com.google.gms:google-services:4.3.15"
     }
 }
 
