--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,22 @@
-include ":mobile"
-rootProject.name = "CloudBuild"
+import org.gradle.api.initialization.resolve.RepositoriesMode
 
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+        mavenLocal()
+    }
+}
+
+include ":mobile"
+
+rootProject.name = "CloudBuild"
