--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -6,17 +6,16 @@ plugins {
 }
 
 android {
-    namespace 'io.syslogic.cloudbuild'
+
     defaultConfig {
+        applicationId 'io.syslogic.cloudbuild'
+        namespace 'io.syslogic.cloudbuild'
         multiDexEnabled true
-        if (rootProject.file('version.properties').exists()) {
-            applicationId rootProject.ext.get("applicationId")
-            targetSdkVersion rootProject.ext.get("targetSdkVersion")
-            compileSdkVersion rootProject.ext.get("compileSdkVersion")
-            minSdkVersion rootProject.ext.get("minSdkVersion")
-            versionName rootProject.ext.get("versionName")
-            versionCode rootProject.ext.get("versionCode")
-        }
+        targetSdkVersion 33
+        compileSdkVersion 33
+        minSdkVersion 22
+        versionName "1.0.1"
+        versionCode 2
     }
 
     lint {
@@ -70,12 +69,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
 
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.4'
-    // implementation 'com.google.firebase:firebase-crashlytics-ndk:18.3.4'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.6'
+    // implementation 'com.google.firebase:firebase-crashlytics-ndk:18.3.6'
 }
 
 if (project.file('google-services.json').exists()) {
     apply plugin: "com.google.gms.google-services"
 } else {
-    logger.warn('file google-services.json is missing.')
+    logger.error('> File google-services.json is missing.')
 }
