--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,12 @@
 # project-wide Gradle Settings
 # @see https://docs.gradle.org/current/userguide/build_environment.html
+systemProp.org.gradle.internal.launcher.welcomeMessageEnabled=false
+
 org.gradle.jvmargs=-Xmx2048M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.workers.max=6
-android.useAndroidX=true
 
-systemProp.org.gradle.internal.launcher.welcomeMessageEnabled=false
+android.useAndroidX=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
