--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -65,13 +65,39 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.6'
-    // implementation 'com.google.firebase:firebase-crashlytics-ndk:18.3.6'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
+    // implementation 'com.google.firebase:firebase-crashlytics-ndk:18.3.7'
+
+    // jUnit
+    testImplementation "junit:junit:$junit_version"
+
+    // Required for connected tests.
+    // https://mvnrepository.com/artifact/androidx.test/monitor
+    debugImplementation "androidx.test:monitor:$test_monitor_version"
+
+    // https://mvnrepository.com/artifact/androidx.test.ext
+    androidTestImplementation "androidx.test.ext:junit:$test_junit_version"
+
+    // https://mvnrepository.com/artifact/androidx.test
+    // https://developer.android.com/jetpack/androidx/releases/test
+    //noinspection GradleDependency
+    androidTestImplementation "androidx.test:core:$test_core_version"
+    androidTestImplementation "androidx.test:runner:$test_runner_version"
+    androidTestImplementation "androidx.test:rules:$test_rules_version"
+
+    // https://mvnrepository.com/artifact/androidx.test.espresso
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
+
+    // https://mvnrepository.com/artifact/androidx.test.uiautomator/uiautomator
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomator_version"
 }
 
 if (project.file('google-services.json').exists()) {
