--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -19,8 +19,9 @@ android {
         versionCode 2
     }
 
-    lint {
-        abortOnError false
+    buildFeatures {
+        buildConfig true
+        dataBinding true
     }
 
     if (rootProject.file('keystore.properties').exists()) {
@@ -61,6 +62,10 @@ android {
                 }
             }
         }
+    }
+
+    lint {
+        abortOnError false
     }
 }
 
