--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,10 +17,10 @@ steps:
     #'--build-arg', 'ANDROID_SDK_PACKAGES="${_ANDROID_SDK_PACKAGES"}',
     #'--build-arg', 'GRADLE_WRAPPER_VERSION=${_GRADLE_WRAPPER_VERSION}',
 
-    # By default, static values are being used (build-trigger configuration not required)
-    # When commenting these out, one has to run `./gradlew build` to fetch components
-    # '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-33 build-tools;33.0.2 ndk;23.1.7779620',
-    '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-33 build-tools;33.0.2',
+    # By default these static values are being used, without the NDK (build-trigger configuration not required.
+    # Note: When commenting these out, one has to run `./gradlew build` to fetch the components instead.
+    # '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0 ndk;23.1.7779620',
+    '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0',
     '--build-arg', 'GRADLE_WRAPPER_VERSION=8.0',
 
     # enable cloudbuild network
