--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 org.gradle.workers.max=6
 
 android.useAndroidX=true
+android.suppressUnsupportedCompileSdk=34
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
