--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ systemProp.org.gradle.internal.launcher.welcomeMessageEnabled=false
 org.gradle.jvmargs=-Xmx2048M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.workers.max=6
+# org.gradle.debug=true
 
 android.useAndroidX=true
 android.suppressUnsupportedCompileSdk=34
