reading the key-path from environmental variable CLOUD_KMS_KEY_PATH.

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -125,7 +125,7 @@ if (project.file('google-services.json').exists()) {
 
 /** Google Cloud KMS */
 cloudKms {
-    kmsKeyPath = 'projects/ PROJECT_ID /locations/global/keyRings/android-gradle/cryptoKeys/default'
+    kmsKeyPath = System.getenv('CLOUD_KMS_KEY_PATH')
     ciphertextFiles = [
             getRootDir().absolutePath + File.separator + 'credentials/debug.keystore.enc',
             getRootDir().absolutePath + File.separator + 'credentials/release.keystore.enc'
