--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -117,6 +117,7 @@ dependencies {
     androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomator_version"
 }
 
+/** Google Play Services */
 if (project.file('google-services.json').exists()) {
     apply plugin: "com.google.gms.google-services"
 } else {
