--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        agp_version = '8.0.2'
+        agp_version = '8.1.0'
         kotlin_version = '1.8.22'
         gms_version = '4.3.15'
         nav_version = '2.6.0'
@@ -23,7 +23,7 @@ buildscript {
     // conditional remote dependency, when buildSrc is absent
     if (! new File(getRootDir().absolutePath + "/buildSrc").exists()) {
         dependencies {
-            classpath 'io.syslogic:google-cloud-kms-gradle-plugin:1.0.7'
+            classpath 'io.syslogic:google-cloud-kms-gradle-plugin:1.0.8'
         }
     }
 }
@@ -54,7 +54,7 @@ if (rootProject.file('keystore.properties').exists()) {
 
 /** Modules */
 allprojects {
-    configurations.all {
+    configurations.configureEach {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             def requested = details.requested
             if (requested.group == 'org.jetbrains.kotlin') {
@@ -66,14 +66,16 @@ allprojects {
         }
     }
     gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        tasks.withType(JavaCompile).tap {
+            configureEach {
+                options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            }
         }
     }
 }
 
 // rootProject > clean
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
 
     // cleanup Gradle logs
     def gradle = project.getGradle()
