--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -15,12 +15,12 @@ android {
         minSdk 22
         compileSdk 34
         targetSdk 34
+        versionCode 2
+        versionName "1.0.1"
         setProperty("archivesBaseName", "cloudbuild_" + versionName)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testBuildType "debug"
         multiDexEnabled true
-        versionName "1.0.1"
-        versionCode 2
     }
 
     compileOptions {
@@ -84,12 +84,14 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
-    implementation 'com.google.firebase:firebase-crashlytics:18.4.0'
-    // implementation 'com.google.firebase:firebase-crashlytics-ndk:18.4.0'
+    implementation "com.google.firebase:firebase-crashlytics:$crashlytics_version"
+    // implementation "com.google.firebase:firebase-crashlytics-ndk:$crashlytics_version"
+
+    implementation "com.google.firebase:firebase-perf:$perf_version"
 
     // jUnit
     testImplementation "junit:junit:$junit_version"
